# agent-task

./: .gitignore  Anchor.toml  Makefile  package.json
programs/agent-task/: Cargo.toml
programs/agent-task/src/: error.rs  lib.rs
programs/agent-task/src/instructions/: claim.rs  complete_task.rs  confirm_task.rs  initialize.rs  mod.rs
programs/agent-task/src/states/: config.rs  mod.rs  task.rs
tests/: claim_task.test.ts  complete_task.test.ts  confirm_task.test.ts  initialize.test.ts
